@@ -73,5 +73,5 @@ float __strtof (const char *s, char **sp)
 }
 
 float __cdecl
-strtof (const char * __restrict__ src, char ** __restrict__ endptr)
+__mingw_strtof (const char * __restrict__ src, char ** __restrict__ endptr)
   __attribute__((alias("__strtof")));
