@@ -1,5 +1,15 @@
 2009-04-20  Ozkan Sezer  <sezeroz@gmail.com>
 
+	FR/2619978:
+	* mingw-w64-crt/gdtoa/strtof.c, mingw-w64-crt/gdtoa/strtopx.c:  Prepend
+	the strtof and strtold symbols with '__mingw_' to provide both of strtof
+	and strtold which rely on msvcrt, and __mingw_strtof and __mingw_strtold
+	which rely on the internal gdtoa library.
+	* mingw-w64-headers/include/stdlib.h:  Properly provide the prototypes
+	for __mingw_strtof and __mingw_strtold.
+
+2009-04-20  Ozkan Sezer  <sezeroz@gmail.com>
+
 	* gdtoa/misc.c: Sync'ed with the netlib.org sources from April 20, 2009.
 	The author's changelog states: "do not attempt to allocate large memory
 	blocks from the private memory pool (which was an unlikely event, but a
